JWTAuthService/jwtsuthservice-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jwtauthservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jwtauthservice
spec:
  hosts:
  - "*"
  gateways:
  - jwtauthservice-gateway
  http:
  - match:
    - uri:
        exact: /auth
    route:
    - destination:
        host: jwtauthservice
        port:
          number: 5000
